INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/Base
	${CMAKE_SOURCE_DIR}/FEM
	${CMAKE_SOURCE_DIR}/FileIO
	${CMAKE_SOURCE_DIR}/GEO
	${CMAKE_SOURCE_DIR}/MathLib
	${CMAKE_SOURCE_DIR}/MSH
	${CMAKE_SOURCE_DIR}/MSHGEOTOOLS
)

# create library
ADD_LIBRARY( MSHGEOTOOLS STATIC ExtractMeshNodes.cpp )

TARGET_LINK_LIBRARIES (
	MSHGEOTOOLS
	${CMAKE_THREAD_LIBS_INIT}
	GEO
	MSH
)

