SUBDIRS = src include test

EXTRA_DIST = lis.icproj lis.vcproj \
             lis.sln lis.suo \
             lis_with_fortran_mpi.sln lis_with_fortran_mpi.suo \
             lis_with_fortran_mpi.icproj lis_with_fortran_mpi.vcproj \
             lis_with_fortran.sln lis_with_fortran.suo \
             lis_with_fortran.icproj lis_with_fortran.vcproj \
             config_win32.h \
             doc/double-double.eps \
             doc/lis-manual-1.1.2_en.tex \
             doc/lis-manual-1.1.2_en.pdf \
             doc/lis-manual-1.1.2_ja.tex \
             doc/lis-manual-1.1.2_ja.pdf \
             doc/storage01.eps \
             doc/storage01_mpi.eps \
             doc/storage02.eps \
             doc/storage02_mpi.eps \
             doc/storage03.eps \
             doc/storage03_mpi.eps \
             doc/storage04.eps \
             doc/storage04_mpi.eps \
             doc/storage04_omp.eps \
             doc/storage05.eps \
             doc/storage05_mpi.eps \
             doc/storage06.eps \
             doc/storage06_mpi.eps \
             doc/storage06_omp.eps \
             doc/storage07.eps \
             doc/storage07_mpi.eps \
             doc/storage08.eps \
             doc/storage08_mpi.eps \
             doc/storage09.eps \
             doc/storage09_mpi.eps \
             doc/storage10.eps \
             doc/storage10_mpi.eps \
             doc/storage11.eps \
             doc/storage11_mpi.eps
