# Source files
set( SOURCES
	GraphicsView2d.cpp
	CoordinateOriginGraphicsItem2d.cpp
	GraphicsItem2d.cpp
	PntGraphicsItem2d.cpp
	ViewWidget2d.cpp
	GraphicsScene.cpp
	PntsModel.cpp
	LineGraphicsItem2d.cpp
	LinesModel.cpp
	ModelItem.cpp
	Model.cpp
	DataView.cpp
	MshModel.cpp
	MshNodeModel.cpp
	MshElemModel.cpp
	MshGraphicsItem2d.cpp
	VisualizationWidget.cpp
	PntTabWidget.cpp
	LineTabWidget.cpp
	StationTabWidget.cpp
	MshTabWidget.cpp
	DBConnectionDialog.cpp
	SHPImportDialog.cpp
	GEOModels.cpp
	DataViewWidget.cpp
	SurfaceModel.cpp
	SurfaceTabWidget.cpp
)

# Moc Header files
set( MOC_HEADERS
	GraphicsView2d.h
	ViewWidget2d.h
	GraphicsScene.h
	PntsModel.h
	LineGraphicsItem2d.h
	LinesModel.h
	ModelItem.h
	PntGraphicsItem2d.h
	Model.h
	DataView.h
	MshModel.h
	MshNodeModel.h
	MshElemModel.h
	MshGraphicsItem2d.h
	VisualizationWidget.h
	PntTabWidget.h
	LineTabWidget.h
	StationTabWidget.h
	MshTabWidget.h
	GraphicsItem2d.h
	CoordinateOriginGraphicsItem2d.h
	DBConnectionDialog.h
	SHPImportDialog.h
	GEOModels.h
	DataViewWidget.h
	SurfaceModel.h
	SurfaceTabWidget.h
)

# Header files
set( HEADERS
	Enums.h
)

# UI files
set( UIS
	ViewWidget2dBase.ui
	#ViewWidget3dBase.ui
	VisualizationWidgetBase.ui
	PntTabWidgetBase.ui
	LineTabWidgetBase.ui
	SurfaceTabWidgetBase.ui
	StationTabWidgetBase.ui
	MshTabWidgetBase.ui
	DBConnection.ui
	DataViewWidgetBase.ui
)

# Run Qts user interface compiler uic on .ui files
qt4_wrap_ui( UI_HEADERS ${UIS} )

# Run Qts meta object compiler moc on header files
qt4_wrap_cpp( MOC_SOURCES ${MOC_HEADERS} )


# Include the headers which are generated by uic and moc
# and include additional header
include_directories(
	.
	${CMAKE_BINARY_DIR}/Qt/Base
	${CMAKE_BINARY_DIR}/Qt/DataView
	${CMAKE_BINARY_DIR}/Qt/StationView/DiagramView
	${CMAKE_BINARY_DIR}/Qt/StationView
	../../Base
	../../MathLib
	../../GEO
	../../MSH
	../../FEM
	../../FileIO
	../Base
	../StationView
	../StationView/DiagramView
	../VtkVis
	${CMAKE_SOURCE_DIR}
	#${OpenSG_INCLUDE_DIR}
	#${OpenSGSupportlibs_INCLUDE_DIR}
	${Shapelib_INCLUDE_DIR}	
)

if (OGS_COMPILE_QVTK)
	include_directories(${CMAKE_BINARY_DIR}/Qt/QVTK ../QVTK)
endif (OGS_COMPILE_QVTK)

# Put moc files in a project folder
source_group("UI Files" REGULAR_EXPRESSION "\\w*\\.ui")
source_group("Moc Files" REGULAR_EXPRESSION "moc_.*")


# Create the library
add_library( QtDataView STATIC
	${SOURCES}
	${HEADERS}
	${MOC_HEADERS}
	${MOC_SOURCES}
	#${UI_HEADERS}
	${UIS}
)

# Link Qt library
target_link_libraries( QtDataView
	${QT_LIBRARIES}
	GEO
	FileIO
	MSH
	QtBase
	DiagramView
	StationView
	${Shapelib_LIBRARIES}
)
