
INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/UTL/FileConverter
	${CMAKE_SOURCE_DIR}/Base
	${CMAKE_SOURCE_DIR}/GEO
	${CMAKE_SOURCE_DIR}/FileIO
	${CMAKE_SOURCE_DIR}/MathLib
	${CMAKE_SOURCE_DIR}/FEM
	${CMAKE_SOURCE_DIR}/MSH
)

ADD_EXECUTABLE (GMSH2OGS GMSH2OGS.cpp)
SET_TARGET_PROPERTIES(GMSH2OGS PROPERTIES FOLDER Utilities)
TARGET_LINK_LIBRARIES (GMSH2OGS
	MSH
	FileIO
)
